添加定时任务模块

--- a/crawler/src/main/resources/application-prod.yml
+++ b/crawler/src/main/resources/application-prod.yml
@@ -1,2 +1,12 @@
 server:
   port: 8000
+
+spring:
+  profiles:
+    include: service-prod
+
+crawler:
+  book: false
+  find: false
+  spider: false
+  score: true
