--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>api</module>
         <module>service</module>
         <module>crawler</module>
+        <module>quartz</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -26,6 +27,11 @@
         <version>1.5.7.RELEASE</version>
     </parent>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
